--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
     "next": "14.2.15",
+    "next-pwa": "^5.6.0",
     "next-themes": "^0.4.4",
     "react": "^18",
     "react-dom": "^18",
