--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,8 +7,8 @@
     "background_color": "#ffffff",
     "theme_color": "#f97316",
     "icons": [
-      { "src": "/icon-192.png", "sizes": "192x192", "type": "image/png" },
-      { "src": "/icon-512.png", "sizes": "512x512", "type": "image/png" }
+      { "src": "/lightBulb.png", "sizes": "192x192", "type": "image/png" },
+      { "src": "/lightBulb.png", "sizes": "512x512", "type": "image/png" }
     ]
   }
   
