--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-three/drei": "^9.122.0",
+    "@react-three/fiber": "^8.18.0",
     "antd": "^5.27.6",
     "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
@@ -18,11 +20,13 @@
     "react": "^18",
     "react-dom": "^18",
     "react-lottie": "^1.2.10",
-    "react-player": "^2.16.1"
+    "react-player": "^2.16.1",
+    "three": "^0.181.2"
   },
   "devDependencies": {
     "@types/node": "24.7.2",
     "@types/react": "19.2.2",
+    "@types/three": "^0.181.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
