--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-dom": "^18",
     "react-lottie": "^1.2.10",
     "react-player": "^2.16.1",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.22",
     "@types/node": "24.7.2",
     "@types/react": "19.2.2",
     "@types/three": "^0.181.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
