--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   },
   "devDependencies": {
     "@types/dom-mediacapture-record": "^1.0.22",
-    "@types/node": "^24.7.2",
+    "@types/node": "^24.10.7",
     "@types/react": "19.2.2",
     "@types/three": "^0.181.0",
     "@types/uuid": "^10.0.0",
@@ -38,6 +38,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14"
+    "tailwindcss": "^3.4.14",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.3"
   }
 }
