--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.122.0",
     "@react-three/fiber": "^8.18.0",
     "antd": "^5.27.6",
+    "express": "^5.2.1",
     "firebase": "^12.5.0",
     "lucide-react": "^0.548.0",
     "next": "14.2.15",
